# ChessMCPServer

./: README.md  pyproject.toml  requirements.txt
src/chess/: chessapi.py  min-mcp-client.py  server.py
